--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 // $body-color: white;
 $primary: hotpink;
 $secondary: rgb(64, 208, 233);
-// $font-family-base: Arial;
+$font-family-base: Arial;
 
 // Include all Bootstrap
 @import "~bootstrap/scss/bootstrap";
